Add searchbox, redirect to search after submit

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -3,3 +3,24 @@
 .IndexPage {
   display: block;
 }
+
+.Header {
+  display: block;
+  text-align: center;
+
+  h1 {
+    text-transform: uppercase;
+  }
+}
+
+.SearchBox {
+  display: block;
+}
+
+.WeatherBoxWrapper {
+  display: block;
+}
+
+.WeatherBox {
+  display: block;
+}
