List forecast results
- City not found error
- Server error in general
- Forecast list when everything is fine :)
- Remove no-unescaped-entities rule from .eslintrc

--- a/pages/index.scss
+++ b/pages/index.scss
@@ -4,14 +4,11 @@
   display: block;
 }
 
-.SearchBox {
+.ResultsError {
   display: block;
-}
-
-.WeatherBoxWrapper {
-  display: block;
-}
-
-.WeatherBox {
-  display: block;
+  text-align: center;
+  font-size: 13px;
+  max-width: 520px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
