--- a/components/Header.scss
+++ b/components/Header.scss
@@ -3,7 +3,9 @@
   text-align: center;
 
   h1 {
+    display: inline-block;
     text-transform: uppercase;
     font-weight: 300;
+    cursor: pointer;
   }
 }
